--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <h3> Hello, Its Me</h3>
             <h1> Zubaer Ahamed</h1>
             <h3>And im a <span> Software Developer</span></h3>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi minus soluta laborum quaerat autem unde non repellat numquam, sunt, maiores cupiditate esse quae totam accusamus illum quos officia perspiciatis. Suscipit.
-
+            <p> Greetings , In this project i will be introducing myself , hope it is a great one!!
             </p>
             <div class = "social-media">
                 <a href = " https://www.linkedin.com/in/zubaer-ahamed-88abb61b7"><i class='bx bxl-linkedin-square'></i></a>
@@ -59,7 +58,7 @@
 
     <section class = "about" id = "about">
         <div class = "about-img">
-            <img src = "images/IMG_9325.png" height="600" alt = "">
+            <img src = "images/IMG_9325.png"  alt = "">
         </div>
 
 
@@ -95,45 +94,59 @@
 
     <!--Projects-->
     <section class="portfolio" id = "portfolio">
-    <h2 class = "heading"> Latest <span>Project</span></h2>
+    <h2> Latest <span>Project</span></h2>
 
     <div class = "portfolio-container">
         <div class = "portfolio-box">
-            <img src = "images/88-886889_port2.png" alt = "">
+            <img src = ".\images\Screenshot (9).png"   alt = "">
             <div class="portfolio-layer">
-                <h2 class = "one">Online Calculator</h2>
+                <h4>Online Calculator</h4>
                 <p> In this Project , by utilizing both html and css I created a calculator that will do basic caclulations such as addition , subtraction , multiplication and division</p>
             <a href = "https://github.com/HackerZay23/Calc"><i class='bx bx-link-external'></i></a>        
             </div>
         </div>
-
-
-        <div class = "portfolio-container">
-            <div class = "portfolio-box">
-                <img src = "images/88-886889_port2.png" alt = "">
-                <div class="portfolio-layer">
-                    <h2 class = "two">Fitness Webpage</h2>
-                    <p> This project is a webpage with general information regarding fitness. </p>
-                <a href = "https://github.com/HackerZay23/Fitness-Webpage"><i class='bx bx-link-external'></i></a>        
-                </div>
-            </div> 
-
-            <div class = "portfolio-container">
-                <div class = "portfolio-box">
-                    <img src = "images/88-886889_port2.png" alt = "">
-                    <div class="portfolio-layer">
-                        <h2 class = "three">Spelling Bee</h2>
-                        <p> This is spelling Bee where you have to guess a random word </p>
-                    <a href = "https://github.com/HackerZay23/SpellingBee"><i class='bx bx-link-external'></i></a>        
-                    </div>
-                </div>
-
-      
-
-
-
-
+        <div class = "portfolio-box">
+            <img src = ".\images\Screenshot (10).png"   alt = "">
+            <div class="portfolio-layer">
+                <h4> Fitness Website</h4>
+                <p> In this Project , by utilizing html and css i've created a website that contains fitness information from verified sources</p>
+            <a href = "https://github.com/HackerZay23/Fitness-Webpage"><i class='bx bx-link-external'></i></a>        
+            </div>
+        </div>
+        <div class = "portfolio-box">
+            <img src = "images/88-886889_port2.png"   alt = "">
+            <div class="portfolio-layer">
+                <h4>Coming soon !!</h4>
+                <p> </p>
+            <a href = "https://github.com/HackerZay23/Calc"><i class='bx bx-link-external'></i></a>        
+            </div>
+        </div>
+        <div class = "portfolio-box">
+            <img src = "images/88-886889_port2.png"   alt = "">
+            <div class="portfolio-layer">
+                <h4>Coming soon !!</h4>
+                <p> </p>
+            <a href = "https://github.com/HackerZay23/Calc"><i class='bx bx-link-external'></i></a>        
+            </div>
+        </div>
+        <div class = "portfolio-box">
+            <img src = "images/88-886889_port2.png"   alt = "">
+            <div class="portfolio-layer">
+                <h4>Coming soon !!</h4>
+                <p> </p>
+            <a href = "https://github.com/HackerZay23/Calc"><i class='bx bx-link-external'></i></a>        
+            </div>
+        </div>
+        <div class = "portfolio-box">
+            <img src = "images/88-886889_port2.png"   alt = "">
+            <div class="portfolio-layer">
+                <h4>Coming soon !!</h4>
+                <p> </p>
+            <a href = "https://github.com/HackerZay23/Calc"><i class='bx bx-link-external'></i></a>        
+            </div>
+        </div>
     </div>
+    
 </section>
 
  
