--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href = "https://github.com/HackerZay23?tab=repositories"><i class='bx bxl-github' ></i></i></a>
                 
             </div>
-            <a href = "/Resume/Resume.word.docx (2).pdf" class = "btn" download> Download Resume</a>
+            <a href = "./Resume/Resume.word.docx (2).pdf" class = "btn" download> Download Resume</a>
         </div>
 
         <div class = "home-img">
