--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             </div>
         </div>
         <div class = "portfolio-box">
-            <img src = "images/88-886889_port2.png"   alt = "">
+            <img src = ".\images\Screenshot (11).png"   alt = "">
             <div class="portfolio-layer">
-                <h4>Coming soon !!</h4>
+                <h4>Weather App</h4>
                 <p> </p>
-            <a href = "https://github.com/HackerZay23/Calc"><i class='bx bx-link-external'></i></a>        
+            <a href = "https://github.com/HackerZay23/Weather_App"><i class='bx bx-link-external'></i></a>        
             </div>
         </div>
         <div class = "portfolio-box">
