--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="portfolio-layer">
                 <h4>Online Calculator</h4>
                 <p> In this Project , by utilizing both html and css I created a calculator that will do basic caclulations such as addition , subtraction , multiplication and division</p>
-            <a href = "https://github.com/HackerZay23/Calc"><i class='bx bx-link-external'></i></a>        
+            <a href = "https://github.com/HackerZay23/Calculator"><i class='bx bx-link-external'></i></a>        
             </div>
         </div>
         <div class = "portfolio-box">
